# bg3dice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package-conda.yml
src/bg3dice/: __init__.py  bg3dice.py
tests/: test_bg3dice.py
